# tailor

./: .gitignore  Makefile  README.md
.github/workflows/: pipeline.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: agents.py  api.py  auth.py  canon.py  config.py  engine.py  events.py  main.py  models.py  provider.py  rendering.py  tree.py  util.py
backend/app/agent/: deps.py  factory.py  model_trace.py
backend/app/agent/capabilities/: __init__.py  resume.py  tailoring.py
backend/app/agent/specs/: analyze.yaml  chat.yaml  cover.yaml  tailor.yaml
backend/app/websocket/: chat.py
backend/canon/: resume.schema.json  resume.yaml
backend/render/templates/cover-v1/: cover.html
backend/render/templates/resume-v1/: resume.html
backend/scripts/: hash_passphrase.py
backend/tests/: conftest.py  test_agent_architecture.py  test_api.py  test_engine.py  test_render.py  test_websocket_security.py
deploy/: .env.example  compose.production.yaml  deploy.sh
deploy/tailor/: compose.yaml
deploy/workspace/gateway/: Caddyfile  Dockerfile  compose.yaml
deploy/workspace/platform/: compose.yaml
deploy/workspace/systemd/: workspace-postgres-backup.service  workspace-postgres-backup.timer
docs/: architecture-audit.md  plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  chat-view.tsx  chat.test.ts  chat.ts  db.ts  diff.ts  edit-engine.test.ts  edit-engine.ts  review-deck.tsx  styles.css  types.ts
