[project]
name = "tailor-backend"
version = "1.0.0"
description = "Stateless resume tailoring and rendering API"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.10.1",
  "PyYAML==6.0.2",
  "jinja2==3.1.6",
  "pydantic-ai-slim[openai]==2.0.0",
  "httpx==0.28.1",
  "argon2-cffi==25.1.0",
  "PyJWT==2.10.1",
  "weasyprint==66.0",
  "pypdf==5.8.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = ["pytest==8.4.1", "pytest-asyncio==1.1.0", "ruff==0.12.5"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501"]
